[package]
name = "easycheck"
version = "0.1.0"
authors = ["Pasqual Koschmieder"]

edition = "2021"
rust-version = "1.79"

[dependencies]
anyhow = "*"
axum = "0.7.*"
futures = "0.3.*"
serde_json = "1.0.*"
async-trait = "0.1.*"
tokio = { version = "1.40.*", features = ["full"] }
serde = { version = "1.0.*", features = ["derive"] }
clap = { version = "4.5.*", features = ["derive", "env"] }
reqwest = { version = "0.12.*", default-features = false, features = ["rustls-tls"] }
