[package]
name = "easycheck"
version = "1.35.0"
authors = ["Pasqual Koschmieder"]

edition = "2021"
rust-version = "1.79"

[dependencies]
anyhow = "*"
axum = "0.8.*"
futures = "0.3.*"
async-trait = "0.1.*"
http-body-util = "0.1.*"
tokio = { version = "1.49.*", features = ["full"] }
hyper-util = { version = "0.1.*", features = ["tokio"] }
proxy-header = { version = "0.1.*", features = ["tokio"] }
hyper = { version = "1.8.*", features = ["client", "http1"] }
serde = { version = "1.0.*", features = ["derive"] }
clap = { version = "4.5.*", features = ["derive", "env"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
